--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.11.3",
     "prisma": "^6.13.0",
     "zod": "^3.22.4"
